// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-radial-progress #render should render component as expected (1) 1`] = `
<gux-radial-progress>
  <gux-radial-loading context="modal"></gux-radial-loading>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (2) 1`] = `
<gux-radial-progress value="0">
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="0" role="progressbar">
    <svg class="gux-svg-container" height="60px" viewBox="0 0 60 60" width="60px">
      <filter id="dropshadow-4">
        <feGaussianBlur in="SourceGraphic" stdDeviation="2"></feGaussianBlur>
        <feOffset dx="0" dy="0" result="offsetblur"></feOffset>
        <feMerge>
          <feMergeNode></feMergeNode>
          <feMergeNode in="SourceGraphic"></feMergeNode>
        </feMerge>
      </filter>
      <circle class="gux-static-circle" cx="50%" cy="50%" r="23.5"></circle>
      <circle class="gux-dynamic-circle" cx="50%" cy="50%" filter="url(#dropshadow-4)" r="23.5" stroke-dasharray="147.6548547187203" stroke-dashoffset="147.6548547187203"></circle>
      <text class="gux-percentage" dominant-baseline="central" x="50%" y="50%">
        0%
      </text>
    </svg>
  </div>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (3) 1`] = `
<gux-radial-progress value="10">
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" role="progressbar">
    <svg class="gux-svg-container" height="60px" viewBox="0 0 60 60" width="60px">
      <filter id="dropshadow-6">
        <feGaussianBlur in="SourceGraphic" stdDeviation="2"></feGaussianBlur>
        <feOffset dx="0" dy="0" result="offsetblur"></feOffset>
        <feMerge>
          <feMergeNode></feMergeNode>
          <feMergeNode in="SourceGraphic"></feMergeNode>
        </feMerge>
      </filter>
      <circle class="gux-static-circle" cx="50%" cy="50%" r="23.5"></circle>
      <circle class="gux-dynamic-circle" cx="50%" cy="50%" filter="url(#dropshadow-6)" r="23.5" stroke-dasharray="147.6548547187203" stroke-dashoffset="132.88936924684828"></circle>
      <text class="gux-percentage" dominant-baseline="central" x="50%" y="50%">
        10%
      </text>
    </svg>
  </div>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (4) 1`] = `
<gux-radial-progress value="100">
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" role="progressbar">
    <svg class="gux-svg-container" height="60px" viewBox="0 0 60 60" width="60px">
      <filter id="dropshadow-8">
        <feGaussianBlur in="SourceGraphic" stdDeviation="2"></feGaussianBlur>
        <feOffset dx="0" dy="0" result="offsetblur"></feOffset>
        <feMerge>
          <feMergeNode></feMergeNode>
          <feMergeNode in="SourceGraphic"></feMergeNode>
        </feMerge>
      </filter>
      <circle class="gux-static-circle" cx="50%" cy="50%" r="23.5"></circle>
      <circle class="gux-dynamic-circle" cx="50%" cy="50%" filter="url(#dropshadow-8)" r="23.5" stroke-dasharray="147.6548547187203" stroke-dashoffset="0"></circle>
      <text class="gux-percentage" dominant-baseline="central" x="50%" y="50%">
        100%
      </text>
    </svg>
  </div>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (5) 1`] = `
<gux-radial-progress value="123">
  <gux-radial-loading context="modal"></gux-radial-loading>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (6) 1`] = `
<gux-radial-progress value="200">
  <gux-radial-loading context="modal"></gux-radial-loading>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (7) 1`] = `
<gux-radial-progress max="100" value="10">
  <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="10" role="progressbar">
    <svg class="gux-svg-container" height="60px" viewBox="0 0 60 60" width="60px">
      <filter id="dropshadow-14">
        <feGaussianBlur in="SourceGraphic" stdDeviation="2"></feGaussianBlur>
        <feOffset dx="0" dy="0" result="offsetblur"></feOffset>
        <feMerge>
          <feMergeNode></feMergeNode>
          <feMergeNode in="SourceGraphic"></feMergeNode>
        </feMerge>
      </filter>
      <circle class="gux-static-circle" cx="50%" cy="50%" r="23.5"></circle>
      <circle class="gux-dynamic-circle" cx="50%" cy="50%" filter="url(#dropshadow-14)" r="23.5" stroke-dasharray="147.6548547187203" stroke-dashoffset="132.88936924684828"></circle>
      <text class="gux-percentage" dominant-baseline="central" x="50%" y="50%">
        10%
      </text>
    </svg>
  </div>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (8) 1`] = `
<gux-radial-progress max="10" value="10">
  <div aria-valuemax="10" aria-valuemin="0" aria-valuenow="10" role="progressbar">
    <svg class="gux-svg-container" height="60px" viewBox="0 0 60 60" width="60px">
      <filter id="dropshadow-16">
        <feGaussianBlur in="SourceGraphic" stdDeviation="2"></feGaussianBlur>
        <feOffset dx="0" dy="0" result="offsetblur"></feOffset>
        <feMerge>
          <feMergeNode></feMergeNode>
          <feMergeNode in="SourceGraphic"></feMergeNode>
        </feMerge>
      </filter>
      <circle class="gux-static-circle" cx="50%" cy="50%" r="23.5"></circle>
      <circle class="gux-dynamic-circle" cx="50%" cy="50%" filter="url(#dropshadow-16)" r="23.5" stroke-dasharray="147.6548547187203" stroke-dashoffset="0"></circle>
      <text class="gux-percentage" dominant-baseline="central" x="50%" y="50%">
        100%
      </text>
    </svg>
  </div>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (9) 1`] = `
<gux-radial-progress max="100" value="test">
  <gux-radial-loading context="modal"></gux-radial-loading>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (10) 1`] = `
<gux-radial-progress max="100" value="-123">
  <gux-radial-loading context="modal"></gux-radial-loading>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (11) 1`] = `
<gux-radial-progress max="100" value="200">
  <gux-radial-loading context="modal"></gux-radial-loading>
</gux-radial-progress>
`;

exports[`gux-radial-progress #render should render component as expected (12) 1`] = `
<gux-radial-progress max="test" value="10">
  <gux-radial-loading context="modal"></gux-radial-loading>
</gux-radial-progress>
`;
